Update 2. Create the data connector.md

--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -38,7 +38,7 @@ Create the indexLO.html file and copy the following code
 
  
 This code is based on a basic sample from the Tableau docs.
-* The tableauwdc-2-3.latest.js file is the main library for the WDC API.
+* The tableauwdc-2-3.latest.js file is the main library for the WDC (Web data connector) API.
 * moment.js will be helpful to convert Live Objects timestamps (ISO-8601) to the tableau expected format 
 * The MongoCnt.js will be our javascript code for our connector.
 * a field that get the number of data to be gathered (currently limited to 1000)
@@ -64,7 +64,7 @@ The basic structure of the code is:
 A few comments about the code:
 
 The code is wrapped in an immediately invoked function expression to create a local scope.
-*	The tableau object isn’t defined in our code, but in the WDC library. (It’s assigned to the global scope.)
+*	The tableau object isn’t defined in our code, but in the WDC (Web data connector) library. (It’s assigned to the global scope.)
 *	The __makeConnector__ function is a constructor that predefines some methods for our connector object.
 *	The __getSchema__ and __getData__ functions are placeholders for now, but will contain the logic for getting the table schema of the data and downloading the data.
 *	The __registerConnector__ function validates the connector object before initialization.
@@ -83,13 +83,15 @@ Copy the following code and paste it directly below the __registerConnector__ fu
         });
     });
 ```
- -----------------------------------------
  
-Define a schema
-Here you need to define how you want to map the data to one or more or tables before you can download data and send it to tableau. This mapping of data is done in the schema.
-You can take a look here to decide what kind of data you want to map in the schema.
+## Define a schema ##
+Here you need to define how you want to map the data to one or more or tables before you can download data and send it to tableau. 
+This mapping of data is done in the schema.
+You can take a look [here](http://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php) to decide what kind of data you want to map in the schema.
 The Android simulator generates through Live Objects the following JSON :
-    {
+
+```ruby
+{
         "id": "5b19493dc74a4967ec9d0bc9",
         "streamId": "android357329073120059",
         "timestamp": "2018-06-07T15:03:25.651Z",
@@ -108,28 +110,114 @@ The Android simulator generates through Live Objects the following JSON :
             "connector": "mqtt"
         },
         "created": "2018-06-07T15:03:25.661Z"
-    },
+    }
+```    
+    
 
 In this sample we will gather the following columns:
--	timestamp
--	streamId
--	hygrometry
--	temperature
--	revmin
--	latitude
--	longitude
+*	timestamp
+*	streamId
+*	hygrometry
+*	temperature
+*	revmin
+*	latitude
+*	longitude
 
 Here is a sample that will map these data. You can copy it to your JavaScript file
  
+```ruby
+(function () {
+    var myConnector = tableau.makeConnector();
 
-Get the data
+    myConnector.getSchema = function (schemaCallback) {
+        var cols = [{
+            id: "timestamp",
+            alias:"timestamp",
+            dataType: tableau.dataTypeEnum.datetime
+
+        }, {
+            id: "streamId",
+            alias: "streamId",
+            dataType: tableau.dataTypeEnum.string
+        }, {
+            id: "hygrometry",
+            alias: "hygrometry",
+            dataType: tableau.dataTypeEnum.int
+        }, {
+            id: "temperature",
+            alias: "temperature",
+            dataType: tableau.dataTypeEnum.int
+        }, {
+            id: "revmin",
+            alias: "revmin",
+            dataType: tableau.dataTypeEnum.int
+        }, {
+            id: "lat",
+            alias: "lat",
+            dataType: tableau.dataTypeEnum.float
+        },{
+            id: "lon",
+            alias: "lon",
+            dataType: tableau.dataTypeEnum.float
+        }];
+
+        var tableSchema = {
+            id: "testAppOAB",
+            alias: "1er test app OAB",
+            columns: cols
+        };
+    schemaCallback([tableSchema]);
+    };
+```
+
+## Get the data ##
 Once the schema is defined, you can start pushing data to Tableau.
-Copy the following code and replace the placeholder getData function:
+Copy the following code and replace the placeholder __getData__ function:
 
+```ruby
+    myConnector.getData = function(table, doneCallback) {
+        $.ajaxSetup({
+            headers : {
+                'X-API-KEY' : 'a9693915fac54fba85a646def7b0c42a'
+            }
+        });
+        var connectionData = JSON.parse(tableau.connectionData);
+        var max_iterations = connectionData.max_iterations;
+        // $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations, function(resp) {
+        $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329073120059?limit="+max_iterations, function(resp) {
+            var feat = resp,
+                tableData = [];
+
+            tableau.log(".getJSON");
+            tableau.log(resp);
+            // Iterate over the JSON object
+            for (var i = 0, len = feat.length; i < len; i++) {
+              var tim = moment(feat[i].timestamp).format('Y-MM-DD HH:mm:ss');
+              tableData.push({
+                    "timestamp": tim,
+                    "streamId": feat[i].streamId,
+                    "hygrometry": feat[i].value.hygrometry,
+                    "temperature": feat[i].value.temperature,
+                    "revmin": feat[i].value.revmin,
+                    "lat": feat[i].location.lat,
+                    "lon": feat[i].location.lon
+                });
+            }
+
+            table.appendRows(tableData);
+            doneCallback();
+        });
+    };
+```
  
-The structure of this code is well explained in the tableau docs. 
-On the headers part, you just have to put the API-KEY you have generated from your Live Objects account.
-In order to get the data from Live Objects we call the following request : "https://liveobjects.orange-business.com/api/v0/data/streams/android357329073120059?limit="+max_iterations
+The structure of this code is well explained in the [tableau docs](http://tableau.github.io/webdataconnector/docs/wdc_tutorial). 
+On the headers part, you just have to put the API-KEY you have generated from your Live Objects account (with "application" rights.
+In order to get the data from Live Objects we call the following request : 
+
+```ruby
+"https://liveobjects.orange-business.com/api/v0/data/streams/android357329073120059?limit="+max_iterations
+```
+
 where 
--	 “android357329073120059” is the data stream id.
--	max_iterations is the number of data gathered (currently a max of the 1000 last generated data)
+* “android357329073120059” is the data stream id.
+* __max_iterations__ is the number of data gathered (currently a max of the 1000 last generated data)
