Update 2. Create the data connector.md

--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -1,6 +1,9 @@
 # Build the Web data connector #
 
-The web data connector is made up of two parts : the html page (here indexLO.html) and a java script (here MongoCnt.js). 
+The web data connector is made up of two parts : 
+* the html page (here indexLO.html) and 
+* a java script (here MongoCnt.js). 
+
 These files must be saved under the “webdataconnector\” path in order to be reachable by the embedded web server.
 
 ## Create the HTML page ##
