Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -13,10 +13,16 @@ http://localhost:8888/Simulator/index.html
 ```
 
 In the WDC URL field, enter the path to the WDC relative to the simulator. In this example, we have put the indexLO.html and MongoCnt.js files into “Examples/TestMftTableauCntFLG”.
- 
+
+![](img/test2.png) 
+
 Click the Start Interactive Phase button. The connector page appears in a new window.
  
+![](img/test3.png) 
+ 
 Enter the number of values to be inserted and click on the “Get Live Objects OAB App Data!”. You will see the columns that will be inserted to Tableau. 
+
+![](img/test4.png) 
  
 Then click on “Fetch Table Data”, the values to be inserted will appear.
  
