Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -26,24 +26,36 @@ Enter the number of values to be inserted and click on the “Get Live Objects O
  
 Then click on “Fetch Table Data”, the values to be inserted will appear.
  
+![](img/test5.png) 
 
-Use the web data connector with Tableau Desktop
+## Use the web data connector with Tableau Desktop ##
 Open Tableau Desktop and select the “Web Data Connector” entry. 
-Your files (html and java scripts) must be into the WDC directory.
-In the WDC URL field, enter the path of your indexLO.html file. The path must be relative to the WDC directory. For example, if you have created them into “webdataconnector/Examples/TestMftTableauCnt”, you might enter: localhost:8888/Examples/TestMftTableauCnt/indexLO.html
- 
+Your files (html and java scripts) **must** be into the WDC directory.
+In the WDC URL field, enter the path of your indexLO.html file. The path must be relative to the WDC directory. For example, if you have created them into 
+
+__“webdataconnector/Examples/TestMftTableauCnt”__
+
+, you might enter: 
+
+```ruby
+localhost:8888/Examples/TestMftTableauCnt/indexLO.html
+```
+![](img/test6.png) 
 
 Then enter the number of data to get (max 1000 in this sample).
 
- 
+![](img/test7.png) 
+
 Tableau will display the columns to be filled. Then click on “Update Now”.
- 
+
+![](img/test8.png) 
 
 Tableau will load your data through Live Objects API.
  
+![](img/test9.png) 
 
 You can then view and analyze your data
  
- 
+![](img/test10.png) 
 
-
+![](img/test11.png) 
