--- a/1. Installation.md
+++ b/1. Installation.md
@@ -1,3 +1,4 @@
+# Install the softwares #
 In order to be familiar with Tableau web data connectors and how to create one, please follow the Tableau tutorial :
 
 [Tableau tutorial](http://tableau.github.io/webdataconnector/docs/)
