--- a/1. Installation.md
+++ b/1. Installation.md
@@ -12,3 +12,37 @@ If you have none, you can use our Android Device Simulator
 # Android Device Simulator of Live Objects #
 
 tuto : télécharger, créer une clé, générer des données à créer 
+
+You can use the MQTT simulator Live Objects provides on Android phone.
+
+First you can [download it on Google Play.](https://play.google.com/store/apps/details?id=com.orange.lo.assetdemo)
+
+After installation you will find it under LO Asset" name.
+
+To use the simulator you need a Live Objects API key.
+
+If you do not have a Live Objects account, you can get a 1 year free account on that page : https://liveobjects.orange-business.com/#/request_account
+
+You can create an API Key in "Configuration" tab , then "Api keys" section.
+Click on "Add an API key"
+
+You have to enter 
+* the Name of your key
+* Its profile : for the simulator you selet "MQTT device"
+* then cick on Create
+
+You will get your API key. *Important : you have to keep it, Live Objects won't display it again if you lose it.*
+![](img/simul1.jpg)
+
+You can use the camera of your phone to scan the QR code to easily enter the key.
+
+On the simulator go on "Simulate" tab and click on "Connection"
+![](img/simul2.jpg)
+
+Your simulator begins sending data on Live Objects.
+
+In "Device" tab, we can check if your simulator is connected seeing its green status :
+![](img/simul3.jpg)
+
+In "Data" tab, you can see incoming data from the simulator. Note the payload format in JSON.
+![](img/simul4.jpg)
