--- a/1. Installation.md
+++ b/1. Installation.md
@@ -15,7 +15,7 @@ You can use the MQTT simulator Live Objects provides on Android phone.
 
 First you can [download it on Google Play.](https://play.google.com/store/apps/details?id=com.orange.lo.assetdemo)
 
-After installation you will find it under LO Asset" name.
+After installation you will find it under "LO Asset" name.
 
 To use the simulator you need a Live Objects API key.
 
