--- a/1. Installation.md
+++ b/1. Installation.md
@@ -1,4 +1,4 @@
-# Install the softwares #
+# Install software #
 In order to be familiar with Tableau web data connectors and how to create one, please follow the Tableau tutorial :
 
 [Tableau tutorial](http://tableau.github.io/webdataconnector/docs/)
@@ -26,7 +26,7 @@ Click on "Add an API key"
 
 You have to enter 
 * the Name of your key
-* Its profile : for the simulator you selet "MQTT device"
+* Its profile : for the simulator you select "MQTT device"
 * then cick on Create
 
 You will get your API key. *Important : you have to keep it, Live Objects won't display it again if you lose it.*
