--- a/1. Installation.md
+++ b/1. Installation.md
@@ -27,7 +27,7 @@ Click on "Add an API key"
 You have to enter 
 * the Name of your key
 * Its profile : for the simulator you select "MQTT device"
-* then cick on Create
+* then click on Create
 
 You will get your API key. *Important : you have to keep it, Live Objects won't display it again if you lose it.*
 ![](img/simul1.jpg)
