--- a/1. Installation.md
+++ b/1. Installation.md
@@ -40,8 +40,12 @@ On the simulator go on "Simulate" tab and click on "Connection"
 
 Your simulator begins sending data on Live Objects.
 
-In "Device" tab, we can check if your simulator is connected seeing its green status :
+In "Device" tab, we can check if your simulator is connected seeing its green status : 
+
 ![](img/simul03.jpg)
 
-In "Data" tab, you can see incoming data from the simulator. Note the payload format in JSON.
+In "Data" tab, you can see incoming data from the simulator. Note the payload format in JSON. 
+
 ![](img/simul4.jpg)
+
+## Now you are ready ! ##
