Update 2. Create the data connector.md

--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -179,13 +179,13 @@ Copy the following code and replace the placeholder __getData__ function:
     myConnector.getData = function(table, doneCallback) {
         $.ajaxSetup({
             headers : {
-                'X-API-KEY' : 'a9693915fac54fba85a646def7b0c42a'
+                'X-API-KEY' : 'xxx'  // enter your Live Objects Api key with application role
             }
         });
         var connectionData = JSON.parse(tableau.connectionData);
         var max_iterations = connectionData.max_iterations;
-        // $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations, function(resp) {
-        $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329073120059?limit="+max_iterations, function(resp) {
+        $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations, function(resp) {
+        // $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329099920059?limit="+max_iterations, function(resp) {
             var feat = resp,
                 tableData = [];
 
