Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -29,7 +29,7 @@ Then click on “Fetch Table Data”, the values to be inserted will appear.
 ![](img/test5.png) 
 
 ## Use the web data connector with Tableau Desktop ##
-Open Tableau Desktop. on the first screen, you find in "To a server" section a "Plus..." section, click on it.
+Open Tableau Desktop. on the first screen, you find in "To a server" section a "More..." section, click on it.
 Then choose and select the “Web Data Connector” entry. 
 
 Your files (html and java scripts) **must** be into the WDC directory.
