--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -56,7 +56,7 @@ Tableau will load your data through Live Objects API.
  
 ![](img/test9.png) 
 
-You can then view and analyze your data
+You can then view and analyze your data. In order to get the same dashboard, you can open the TestFLG 1.twb in Tableau software.
  
 ![](img/test10.png) 
 
