Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -58,7 +58,7 @@ Tableau will load your data through Live Objects API.
 
 You can then view and analyze your data. 
 
-In order to get the same dashboard, **you can open the TestFLG 1.twb file in Tableau Desktop**.
+In order to get the same dashboard, **you can open the LoDash2.twb file in Tableau Desktop**.
  
 ![](img/test10.png) 
 
