Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -60,6 +60,6 @@ You can then view and analyze your data.
 
 In order to get the same dashboard, **you can open the LoDash2.twb file in Tableau Desktop**.
  
-![](img/test10.png) 
+![](img/tableau20.jpg) 
 
-![](img/test11.png) 
+![](img/tableau21.jpg) 
