Update 2. Create the data connector.md

--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -212,8 +212,9 @@ Copy the following code and replace the placeholder __getData__ function:
 ```
  
 The structure of this code is well explained in the [tableau docs](http://tableau.github.io/webdataconnector/docs/wdc_tutorial). 
-On the headers part, you just have to put the API-KEY you have generated from your Live Objects account (with "application" rights.
-In order to get the data from Live Objects we call the following request : 
+On the headers part : 
+* you just have to put the **API-KEY** you have generated from your Live Objects account **with "application" rights**.
+* in order to get the data from Live Objects we call the following request : 
 
 ```ruby
 "https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329099920059?limit="+max_iterations
