Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -42,6 +42,9 @@ __“webdataconnector/Examples/TestMftTableauCntFLG”__
 ```ruby
 localhost:8888/Examples/TestMftTableauCntFLG/indexLO.html
 ```
+
+![](img/test6.png) 
+
 ![](img/test61.png) 
 
 Then enter the number of data to get (max 1000 in this sample).
