Update 3. Test and use it.md

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -62,7 +62,8 @@ Tableau will load your data through Live Objects API.
 You can then view and analyze your data. 
 
 In order to get the same dashboard, **you can open the LoDash2.twb file in Tableau Desktop**. 
-Do not forget your own data from your data connector (overwise you will read the demo data included in the file).
+
+Do not forget to import your own data from your data connector (overwise you will read the demo data included in the file).
  
 ![](img/tableau20.jpg) 
 
