JS code to import more than 1000 requests from the Live Objects Mongo Db

--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -11,6 +11,7 @@ Create the indexLO.html file and copy the following code
 
 
 ```ruby
+
 <html>
 <head>
     <title>Live Objects OAB App test 1</title>
@@ -28,15 +29,17 @@ Create the indexLO.html file and copy the following code
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-              <label for="max_iterations">Max number of data to return :</label>
-              <input class="form-control" id="max_iterations" value="100">
-              <small class="text-muted"> Value is limited to 1000 </small><br>
+              <label for="stream_id">Enter the Stream Id :</label>
+              <input class="form-control" id="stream_id" value="android357329073120059PRIMARY">
+              <label for="max_iterations">Enter the number of data to get :</label>
+              <input class="form-control" id="max_iterations" value="1000">
                 <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get Live Objects OAB App Data!</button>
             </div>
         </div>
     </div>
 </body>
 </html>
+
 ```
 
  
@@ -44,7 +47,9 @@ This code is based on a basic sample from the Tableau docs.
 * The tableauwdc-2-3.latest.js file is the main library for the WDC (Web data connector) API.
 * moment.js will be helpful to convert Live Objects timestamps (ISO-8601) to the tableau expected format 
 * The MongoCnt.js will be our javascript code for our connector.
-* a field that get the number of data to be gathered (currently limited to 1000)
+* We have put 2 fields to be filled : 
+    * a field that get the number of data to be gathered (default: 1000)
+    * the data stream Id  (currently limited to 1000) (default: “android357329073120059PRIMARY”)
 * a simple button to get data. You can attach an event listener to the button.
 
 ## Create the connector object ##
@@ -173,28 +178,47 @@ Here is a sample that will map these data. You can copy it to your JavaScript fi
 
 ## Get the data ##
 Once the schema is defined, you can start pushing data to Tableau.
-Copy the following code and replace the placeholder __getData__ function:
+Copy the following code with the __getNextData__ function and replace the placeholder __getData__ function:
 
 ```ruby
-    myConnector.getData = function(table, doneCallback) {
+
+    myConnector.getNextData = function (table, doneCallback, firstElementIndex, loadedCount, nextElementId) {
         $.ajaxSetup({
-            headers : {
-                'X-API-KEY' : 'xxx'  // enter your Live Objects Api key with application role
+            headers: {
+                'X-API-KEY': 'XXXX' // Put your Live Objects Application API Key here
             }
         });
         var connectionData = JSON.parse(tableau.connectionData);
         var max_iterations = connectionData.max_iterations;
-        $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations, function(resp) {
-        // $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329099920059?limit="+max_iterations, function(resp) {
+        var stream_id = connectionData.stream_id;
+        var limit = Math.min(max_iterations, 1000);
+
+        // For less than 1000 raws : $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations, function(resp) {
+        // For more than 1000 raws use the Id of the last raw from the last request : $.getJSON("https://liveobjects.orange-business.com/api/v0/data/streams/PUT_YOUR_STREAMID_HERE?limit="+max_iterations+ "&bookmarkId=" + nextElementId, function(resp) {
+
+        // Build the request
+        var get = "https://liveobjects.orange-business.com/api/v0/data/streams/"+stream_id+"?limit="
+            + limit;
+
+        if (0 < firstElementIndex) {
+            console.log('Will look for more ' + limit + ' messages');
+            get += "&bookmarkId=" + nextElementId;
+        } else {
+            console.log('Will look for ' + limit + ' messages');
+        }
+
+        $.getJSON(get, function (resp) {
             var feat = resp,
-                tableData = [];
+                tableData = [],
+                lastId = "";
 
             tableau.log(".getJSON");
             tableau.log(resp);
             // Iterate over the JSON object
             for (var i = 0, len = feat.length; i < len; i++) {
-              var tim = moment(feat[i].timestamp).format('Y-MM-DD HH:mm:ss');
-              tableData.push({
+                var tim = moment(feat[i].timestamp).format('Y-MM-DD HH:mm:ss');
+                lastId = feat[i].id;
+                tableData.push({
                     "timestamp": tim,
                     "streamId": feat[i].streamId,
                     "hygrometry": feat[i].value.hygrometry,
@@ -206,20 +230,50 @@ Copy the following code and replace the placeholder __getData__ function:
             }
 
             table.appendRows(tableData);
-            doneCallback();
+            loadedCount += feat.length;
+            firstElementIndex += limit;
+
+            console.log('found ' + loadedCount + ' messages.')
+
+            if (max_iterations > 1000 && loadedCount < max_iterations && firstElementIndex === loadedCount) {
+                myConnector.getNextData(table, doneCallback, firstElementIndex, loadedCount, lastId);
+            } else {
+                doneCallback();
+            }
+
         });
+    }
+
+    myConnector.getData = function (table, doneCallback) {
+        myConnector.getNextData(table, doneCallback, 0, 0, null);
     };
+
 ```
  
 The structure of this code is well explained in the [tableau docs](http://tableau.github.io/webdataconnector/docs/wdc_tutorial). 
 On the headers part : 
-* you just have to put the **API-KEY** you have generated from your Live Objects account **with "application" rights**.
-* in order to get the data from Live Objects we call the following request : 
+* You just have to put the **API-KEY** you have generated from your Live Objects account **with "application" rights**.
+* If you need less than 1000 raws in order to get the data from Live Objects we the code will call the following request : 
 
 ```ruby
-"https://liveobjects.orange-business.com/api/v0/data/streams/androidFLG357329099920059?limit="+max_iterations
+"https://liveobjects.orange-business.com/api/v0/data/streams/"+stream_id+"?limit="+ limit"
 ```
 
 where 
-* “android357329073120059” is the data stream id.
-* __max_iterations__ is the number of data gathered (currently a max of the 1000 last generated data)
+* __“stream_id”__ is the Live Objects data stream id entered into the IndexLO.html page.
+* __“limit”__ is the number of data to be gathered (currently a max of the 1000 data)
+
+If you request more than 1000 data, the function will make recursive calls and will add as the __bookmarkId__ (“nextElementId”) the last data Id of the previous request :
+
+```ruby
+        // Build the request
+        var get = "https://liveobjects.orange-business.com/api/v0/data/streams/"+stream_id+"?limit="
+            + limit;
+
+        if (0 < firstElementIndex) {
+            console.log('Will look for more ' + limit + ' messages');
+            get += "&bookmarkId=" + nextElementId;
+        } else {
+            console.log('Will look for ' + limit + ' messages');
+        }
+```
