JS code to import more than 1000 requests from the Live Objects Mongo Db

--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -12,21 +12,21 @@ Open a browser and launch the WDC simulator with the following url:
 http://localhost:8888/Simulator/index.html
 ```
 
-In the WDC URL field, enter the path to the WDC relative to the simulator. In this example, we have put the indexLO.html and MongoCnt.js files into “Examples/TestMftTableauCntFLG”.
+In the WDC URL field, enter the path to the WDC relative to the simulator. In this example, we have put the indexLO.html and MongoCnt.js files into “Examples/TestTableauCntFLGV3 - Publish/”.
 
-![](img/test2.png) 
+![](img/test2_1.png) 
 
 Click the Start Interactive Phase button. The connector page appears in a new window.
  
-![](img/test3.png) 
+![](img/test3_1.png) 
  
-Enter the number of values to be inserted and click on the “Get Live Objects OAB App Data!”. You will see the columns that will be inserted to Tableau. 
+Enter the stream Id of the data to be imported and the number of values to be inserted and then click on the “Get Live Objects OAB App Data!”. You will see the columns that will be inserted to Tableau.
 
-![](img/test4.png) 
+![](img/test4_1.png) 
  
 Then click on “Fetch Table Data”, the values to be inserted will appear.
  
-![](img/test5.png) 
+![](img/test5_1.png) 
 
 ## Use the web data connector with Tableau Desktop ##
 Open Tableau Desktop. on the first screen, you find in "To a server" section a "More..." section, click on it.
@@ -35,29 +35,27 @@ Then choose and select the “Web Data Connector” entry.
 Your files (html and java scripts) **must** be into the WDC directory.
 In the WDC URL field, enter the path of your indexLO.html file. The path must be relative to the WDC directory. For example, if you have created them into 
 
-__“webdataconnector/Examples/TestMftTableauCntFLG”__
+__“webdataconnector/Examples/TestTableauCntFLGV3 - Publish”__
 
 , you might enter: 
 
 ```ruby
-localhost:8888/Examples/TestMftTableauCntFLG/indexLO.html
+http://localhost:8888/Examples/TestTableauCntFLGV3 - Publish/indexLO.html
 ```
 
-![](img/test6.png) 
+![](img/test6_1.png) 
 
-![](img/test61.png) 
+Enter the stream Id of the data to be imported and the number of values to be inserted then click on the “Get Live Objects OAB App Data!”
 
-Then enter the number of data to get (max 1000 in this sample).
-
-![](img/test7.png) 
+![](img/test7_1.png) 
 
 Tableau will display the columns to be filled. Then click on “Update Now”.
 
-![](img/test8.png) 
+![](img/test8_1.png) 
 
-Tableau will load your data through Live Objects API.
+Tableau will import your data through the Live Objects API.
  
-![](img/test9.png) 
+![](img/test9_1.png) 
 
 You can then view and analyze your data. 
 
@@ -68,3 +66,11 @@ Do not forget to import your own data from your data connector (overwise you wil
 ![](img/tableau20.jpg) 
 
 ![](img/tableau21.jpg) 
+
+
+After a first import, if you need to refresh your data : right click on your data source, then “Extract/Refresh”. The Tableau database will be updated.
+You can check the lately imported data by right click on your data source, then “View Data…”.
+
+![](img/tableau23.png) 
+
+
