--- a/1. Installation.md
+++ b/1. Installation.md
@@ -1,3 +1,5 @@
+Copyright Orange - 2019 - Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0) - https://creativecommons.org/licenses/by-sa/3.0/
+
 # Install software #
 In order to be familiar with Tableau web data connectors and how to create one, please follow the Tableau tutorial :
 
