--- a/2. Create the data connector.md
+++ b/2. Create the data connector.md
@@ -1,3 +1,5 @@
+Copyright Orange - 2019 - Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0) - https://creativecommons.org/licenses/by-sa/3.0/
+
 # Build the Web data connector #
 
 The web data connector is made up of two parts : 
