--- a/3. Test and use it.md
+++ b/3. Test and use it.md
@@ -1,3 +1,5 @@
+Copyright Orange - 2019 - Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0) - https://creativecommons.org/licenses/by-sa/3.0/
+
 # Test the web data connector with the simulator #
 
 Start the web server : 
